--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ backports.functools-lru-cache==1.6.4
 beautifulsoup4==4.11.1 
 bleach==5.0.1 
 certifi==2022.9.24 
-cffi==1.15.1 colorama==0.4.5 
+cffi==1.15.1 
+colorama==0.4.5 
 contourpy==1.0.5 
 cycler==0.11.0 
 debugpy==1.6.3 
