--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ parso==0.8.3
 pickleshare==0.7.5 
 Pillow==9.2.0 
 PIMS==0.6.1 
-pip pkgutil_resolve_name==1.3.10 
+pkgutil_resolve_name==1.3.10 
 ply==3.11 
 prometheus-client==0.15.0 
 prompt-toolkit==3.0.31 
