--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ executing==1.1.1
 fastjsonschema==2.16.2 
 flit_core==3.7.1 
 fonttools==4.37.4 
-imagecodecs==2022.9.26 
+idna==3.4 
 imageio==2.22.0 
 importlib-metadata==4.11.4 
 importlib-resources==5.10.0 
