--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python==1.0.7
 anyio==3.6.1 
 argon2-cffi==21.3.0 
 argon2-cffi-bindings==21.2.0 
@@ -21,6 +22,7 @@ fastjsonschema==2.16.2
 flit_core==3.7.1 
 fonttools==4.37.4 
 idna==3.4 
+imagecodecs==2022.9.26
 imageio==2.22.0 
 importlib-metadata==4.11.4 
 importlib-resources==5.10.0 
